--- a/MRC/MRC.csproj
+++ b/MRC/MRC.csproj
@@ -6,12 +6,12 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{63D576CF-FF3E-472E-87EC-2295BEE29144}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>MRC_Client</RootNamespace>
-    <AssemblyName>MRC_Client</AssemblyName>
+    <RootNamespace>MRC</RootNamespace>
+    <AssemblyName>MRC</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
